@@ -9,8 +9,9 @@ class KestrelProject(info: ProjectInfo)
   with SubversionPublisher
   with PublishSite
 {
-  val ostrich = "com.twitter" % "ostrich" % "4.9.4"
-  val naggati = "com.twitter" % "naggati" % "2.2.0"
+  val ostrich = "com.twitter" % "ostrich" % "4.10.0"
+  val naggati = "com.twitter" % "naggati" % "2.2.0" intransitive() // allow custom netty
+  val netty   = "org.jboss.netty" % "netty" % "3.2.6.Final"
   val finagle = "com.twitter" % "finagle-core" % "1.9.5"
   val finagle_ostrich4 = "com.twitter" % "finagle-ostrich4" % "1.9.5"
   val scrooge_runtime = "com.twitter" % "scrooge-runtime" % "1.0.3"
@@ -40,7 +41,7 @@ class KestrelProject(info: ProjectInfo)
 
   override def releaseBuild = !(projectVersion.toString contains "SNAPSHOT")
 
-  override def subversionRepository = Some("http://svn.local.twitter.com/maven-public")
+  override def subversionRepository = Some("https://svn.twitter.biz/maven-public")
 
   override def githubRemote = "github"
 
@@ -55,7 +56,24 @@ class KestrelProject(info: ProjectInfo)
   lazy val packageLoadTests = packageLoadTestsAction
   override def packageDistTask = packageLoadTestsAction && super.packageDistTask
 
-//  override def fork = forkRun(List("-Xmx1024m", "-verbosegc", "-XX:+PrintGCDetails"))
+  // generate a distribution zip for release.
+  def releaseDistTask = task {
+    val releaseDistPath = "dist-release" / distName ##
+
+    releaseDistPath.asFile.mkdirs()
+    (releaseDistPath / "libs").asFile.mkdirs()
+    (releaseDistPath / "config").asFile.mkdirs()
+
+    FileUtilities.copyFlat(List(jarPath), releaseDistPath, log).left.toOption orElse
+      FileUtilities.copyFlat(List(outputPath / loadTestJarFilename), releaseDistPath, log).left.toOption orElse
+      FileUtilities.copyFlat(dependentJars.get, releaseDistPath / "libs", log).left.toOption orElse
+      FileUtilities.copy(((configPath ***) --- (configPath ** "*.class")).get, releaseDistPath / "config", log).left.toOption orElse
+      FileUtilities.copy((scriptsOutputPath ***).get, releaseDistPath, log).left.toOption orElse
+      FileUtilities.zip((("dist-release" ##) / distName).get, "dist-release" / (distName + ".zip"), true, log)
+  }
+  val ReleaseDistDescription = "Creates a deployable zip file with dependencies, config, and scripts."
+  lazy val releaseDist = releaseDistTask.dependsOn(`package`, makePom, copyScripts).describedAs(ReleaseDistDescription)
+
 
   lazy val putMany = task { args =>
     runTask(Some("net.lag.kestrel.load.PutMany"), testClasspath, args).dependsOn(testCompile)
